# flask-forms-example

./: Makefile  README.md  pyproject.toml  setup.cfg
flask_forms/: myapp.py
flask_forms/templates/users/: index.html
tests/: test_myapp.py
