[tool.poetry]
name = "flask-forms"
version = "0.1.0"
description = ""
authors = ["Alexander Larriva <alarriva@yandex.ru>"]
readme = "README.md"
packages = [{include = "flask_forms"}]

[tool.poetry.dependencies]
python = "^3.8.1"
Flask = "^2.0.1"




[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
Faker = "^8.8.2"
requests = "^2.31.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
